tests/security/print/output.txt
ERROR: TaintedData - input.hack:1:7 - Detected tainted HTML tags in path $_GET --ExpressionFetch(ArrayValue, "name")--> $_GET['name'] (input.hack:1:7) --Default--> call to echo (input.hack:1:7) --Default--> echo#1